added more stuff

--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,12 @@
     <div class="nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="hobbies.html">Hobbies</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="showings.html">Showings</a></li>
+          <li><a href="tickets.html">Tickets</a></li>
+          <li><a href="Snacks.html">Snack Bar</a></li>
+          <li><a href="contact.html">Contact us</a></li>
         </ul>
       </div>
-
   </div>
 
   <section class="contact">
