--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Holiday auto</title>
+  <title>Holiday Auto Theatre Home </title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="header">
-xxx
+
     <div class="name">
-        <a href="index.html"><h1>Alex Pham</h1></a>
+        <a href="index.html"><h1>Holiday Auto Theatre</h1></a>
     </div>
     
     <div class="nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="hobbies.html">Hobbies</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="showings.html">Showings</a></li>
+          <li><a href="tickets.html">Tickets</a></li>
+          <li><a href="Snacks.html">Snack Bar</a></li>
+          <li><a href="contact.html">Contact us</a></li>
         </ul>
       </div>
 
   </div>
 
-  <section class="background-section" style="background-image: holiday_auto: .j;">
+  <section class="background-section" style="background-image: url('holiday_auto.jpeg');">
+
     <div class="container">
       <div class="content">
-        <h1>Hi, welcome to personal website.</h1>
-        <h3>Alex Pham .</h3>
+        <h1>Holiday Auto Theatre</h1>
+      
       </div>
     </div>
   </section>
@@ -37,7 +38,7 @@ xxx
 
   <footer>
     <div class="container">
-      <p>Alex Pham 2024</p>
+      <p>Holiday Auto Theatre 2024</p>
     </div>
   </footer>
 </body>
