--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Holiday Auto Theatre Home </title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <div class="header">
 
     <div class="name">
-        <a href="index.html"><h1>Holiday Auto Theatre</h1></a>
+        <a href="css/index.css"><h1>Holiday Auto Theatre</h1></a>
     </div>
     
     <div class="nav">
@@ -25,7 +25,7 @@
 
   </div>
 
-  <section class="background-section" style="background-image: url('holiday_auto.jpeg');">
+  <section class="background-section" style="background-image:url('imgs/holiday_auto.jpeg');>
 
     <div class="container">
       <div class="content">
