--- a/showings.html
+++ b/showings.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Holiday Auto Theatre Showings</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="showings.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/showings.css">
 </head>
 <body>
   <div class="header">
@@ -30,21 +30,21 @@
     <div class="container">
       
       <div class="card">
-        <img src="download.jpeg" alt="Avatar">
+        <img src="imgs/movie_1.jpeg" alt="Avatar">
         <div class="card-content">
           <h3>Avatar the way of water</h3>
         </div>
       </div>
 
       <div class="card">
-        <img src="movie_2.jpeg" alt="Oppenheimer">
+        <img src="imgs/movie_2.jpeg" alt="Oppenheimer">
         <div class="card-content">
           <h3>Oppenheimer</h3>
         </div>
       </div>
 
       <div class="card">
-        <img src="movie_3.jpeg" alt="Kung Fu panda 4">
+        <img src="imgs/movie_3.jpeg" alt="Kung Fu panda 4">
         <div class="card-content">
           <h3>Kung Fu panda 4 </h3>
           
