--- a/snacks.html
+++ b/snacks.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Holiday Auto Theatre snack bar</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="snacks.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/snacks.css">
 </head>
 <body>
   <div class="header">
